<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.signup.SignupFragment"
        android:background="@drawable/gradient_background">

    <TextView
            android:id="@+id/SignupText"
            android:layout_gravity="center"
            android:fontFamily="@font/futura_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/signup" />

    <LinearLayout
            android:layout_width="255dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/field_background"
            android:layout_marginTop="40dp" >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_email"
                android:contentDescription="@string/email"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"/>

        <EditText
                android:id="@+id/Email"
                android:fontFamily="@font/futura_bold"
                android:autofillHints="emailAddress"
                android:layout_gravity="center"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/email"/>

        <ImageView
                android:id="@+id/EmailCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_correct"
                android:contentDescription="@string/email"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
            android:id="@+id/EmailHint"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/SettingsInputHint"
            android:visibility="visible"
            android:text="@string/email_hint" />

    <LinearLayout
            android:layout_width="255dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/field_background"
            android:layout_marginTop="30dp" >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_key"
                android:contentDescription="@string/email"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"/>

        <EditText
                android:id="@+id/Password"
                android:fontFamily="@font/futura_bold"
                android:autofillHints="password"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        <ImageView
                android:id="@+id/PasswordCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_correct"
                android:contentDescription="@string/email"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/PasswordHint">

        <TextView
                android:id="@+id/PasswordHint1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/SettingsInputHint"
                android:visibility="visible"
                android:text="@string/password_hint" />

        <TextView
                android:id="@+id/PasswordHint2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/SettingsInputHint"
                android:visibility="visible"
                android:text="@string/password_hint2" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="255dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/field_background"
            android:layout_marginTop="30dp" >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_key"
                android:contentDescription="@string/email"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"/>

        <EditText
                android:id="@+id/RepeatPassword"
                android:fontFamily="@font/futura_bold"
                android:autofillHints="password"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"/>

        <ImageView
                android:id="@+id/RepeatPasswordCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_correct"
                android:contentDescription="@string/email"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
            android:id="@+id/RepeatPasswordHint"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/SettingsInputHint"
            android:visibility="visible"
            android:text="@string/repeat_password_hint" />

    <TextView
            android:id="@+id/SignUpError"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/SettingsInputHint"
            android:visibility="visible"
            android:text="@string/signupError" />

    <Button
            android:id="@+id/SignupButton"
            android:fontFamily="@font/futura_bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            android:background="@drawable/drip_button"/>

    <Button
            android:id="@+id/LoginButton"
            android:fontFamily="@font/futura_bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            android:background="@drawable/drip_button"/>

</LinearLayout>