<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.login.LoginFragment"
        android:background="@drawable/gradient_background">

    <TextView
            android:id="@+id/LoginText"
            android:layout_gravity="center"
            android:fontFamily="@font/futura_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/login" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_gravity="center"
            android:layout_width="310dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            app:startIconTint="@color/white"
            app:startIconDrawable="@drawable/ic_icon_email"
            app:hintEnabled="false"
            app:errorTextColor="@color/validate_error"
            app:expandedHintEnabled="false"
            app:boxBackgroundMode="none"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:background="@drawable/field_background"
                android:hint="@string/email_field"
                android:textColorHint="@drawable/selector_auth_fields"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_gravity="center"
            android:layout_width="310dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            app:startIconTint="@color/white"
            app:startIconDrawable="@drawable/ic_icon_key"
            app:errorTextColor="@color/validate_error"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorIconDrawable="@null"
            app:hintAnimationEnabled="false"
            app:counterTextColor="@color/white"
            app:counterOverflowTextColor="@color/validate_error"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:expandedHintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:background="@drawable/field_background"
                android:hint="@string/password_field"
                android:textColorHint="@drawable/selector_auth_fields"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/LoginButton"
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/login" />

    <Button
            android:id="@+id/SignupButton"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/signup" />

</LinearLayout>